[package]
name = "worker-kv"
version = "0.5.1"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"
description = "Rust bindings to Cloudflare Worker KV Stores."
repository = "https://github.com/zebp/worker-kv"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.50"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
wasm-bindgen = { version = "*" }
wasm-bindgen-futures = "*"
serde-wasm-bindgen = "*"

[dev-dependencies]
fs_extra = "1.2.0"
psutil = { git = "https://github.com/mygnu/rust-psutil", branch = "update-dependencies" }
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.5.0", features = ["rt", "macros", "rt-multi-thread", "test-util", "time"] }
